tests/NormalTests/paczka1/small_fuzzy/20835198.err
Error in line 2: S665 A978 35,0
Error in line 5: YdnHmxF7Lqh S665 78,4
